--- a/views/frontend/join_us.ejs
+++ b/views/frontend/join_us.ejs
@@ -5,7 +5,8 @@
     Name: <%= obj.name%>
     Email: <%= obj.email%>
     Message: <%= obj.message%>
-    phoneNumber: <%= obj.phoneNumber%>
+    Phone Number: <%= obj.phoneNumber%>
+    Company: <%= obj.company%>
 </body>
 
 </html>
