modified cart schema

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,8 +1,7 @@
 <html>
 
 <body>
-    <h3>Getting error.</h3>
-    <hp>Message.</p>
+    <h3>Getting Error: <%= error.status%> - <%= error.message%></h3>
 </body>
 
 </html>
