changes into authentication functionality

--- a/views/frontend/join_us.ejs
+++ b/views/frontend/join_us.ejs
@@ -2,10 +2,10 @@
 
 <body>
     <h3>join us Picky pigs.</h3>
-    Name: <%= obj.name%>
-    Email: <%= obj.email%>
-    Message: <%= obj.message%>
-    Phone Number: <%= obj.phoneNumber%>
+    Name: <%= obj.name%><br/>
+    Email: <%= obj.email%><br/>
+    Message: <%= obj.message%><br/>
+    Phone Number: <%= obj.phoneNumber%><br/>
     Company: <%= obj.company%>
 </body>
 
